# gaussian-splatting

./: .gitignore  .gitmodules  .pylintrc  AGENTS.md  IMPLEMENTATION.md  README.md  THESIS_INFO.md  __init__.py  metrics.py  pyproject.toml  render.py  requirements.txt  setup.py  train.py
arguments/: __init__.py
gaussian_renderer/: __init__.py
scene/: AGENTS.md  __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
utils/: camera_utils.py  general_utils.py  graphics_utils.py  image_utils.py  loss_utils.py  point_cloud_utils.py  sh_utils.py
weekly_reports/: week04_2025-12-16.md  week05_2026-02-12.md
